--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql2": "^2.0.1",
     "sequelize": "^5.21.2"
