--- a/web/package.json
+++ b/web/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@reduxjs/toolkit": "^1.8.5",
     "@types/next": "^9.0.0",
     "@types/react-icons": "^3.0.0",
+    "@types/react-redux": "^7.1.24",
     "@types/styled-components": "^5.1.11",
     "axios": "^0.24.0",
     "husky": "^7.0.1",
@@ -19,7 +21,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
     "react-toastify": "^7.0.4",
+    "redux": "^4.2.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
