--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@reduxjs/toolkit": "^1.8.5",
+    "@types/axios": "^0.14.0",
     "@types/next": "^9.0.0",
     "@types/react-icons": "^3.0.0",
     "@types/react-redux": "^7.1.24",
