--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -25,6 +25,6 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/components/Modal/styles.js"],
   "exclude": ["node_modules"]
 }
