--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "./src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/server.js",
+    "dev": "nodemon --trace-warnings ./src/server.js",
     "start": "node ./src/server.js"
   },
   "keywords": [],
@@ -20,7 +20,8 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql2": "^2.0.1",
-    "sequelize": "^5.21.2"
+    "sequelize": "^5.21.2",
+    "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
     "eslint": "^6.7.1",
